k8s/db/minio-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-operator-console-ingress
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: minio-operator.yadon3141.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
